# models/userModel.js
@@ -2,18 +2,18 @@ const Joi = require("joi");
 const { Schema, model } = require("mongoose");
 
 const userRegistrationSchema = Joi.object({
-  name: Joi.string().required(),
+  name: Joi.string().alphanum().required(),
   email: Joi.string()
     .email({ minDomainSegments: 2, tlds: { allow: true } })
     .required(),
-  password: Joi.string().min(5).max(20).required(),
+  password: Joi.string().min(6).max(16).required(),
 });
 
 const userLoginSchema = Joi.object({
   email: Joi.string()
     .email({ minDomainSegments: 2, tlds: { allow: true } })
     .required(),
-  password: Joi.string().min(5).max(20).alphanum().required(),
+  password: Joi.string().min(6).max(16).required(),
 });
 
 // const userSubsriptionSchema = Joi.object({
@@ -42,6 +42,10 @@ const userSchema = new Schema({
     type: String,
     default:
       "https://res.cloudinary.com/dwqka6xc7/image/upload/v1682009445/soYummyT2D/avatars/tbe6lqtuz7ki8dcxpqgh.png",
+  },
+
+  lastVisit: {
+    type: String,
   },
 
   subscription: {
@@ -74,7 +78,7 @@ const userSchema = new Schema({
 
   numberOfVisits: {
     type: Number,
-    default: 0,
+    default: 1,
   },
 
   numberOfOwnRecipes: {
